--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Hello World!</p>
-    <p>This is new Feature(deopdown)</p>
+    <p>This is new Feature(dropdown)</p>
 </body>
 </html>
